swagger edits
